打印机分配、其他函数调整